fixed row-gap 20 to 25px

--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,7 @@
 
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 25px;
 
     color: #FFF;
     font-family: 'Raleway';
